admission/ValidatingAdmissionPolicy/policies/pod-security-standards/deny.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: violating-pod-security-standards
  annotations:
    kubeapt.io/uuid: "00728e67-856f-45a1-9b84-7e34c2c8cf9e"
---
apiVersion: v1
kind: Namespace
metadata:
  name: violating-pod-security-standards-other-labels
  annotations:
    kubeapt.io/uuid: "00728e67-856f-45a1-9b84-7e34c2c8cf9e"
  labels:
    team: platform
